// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`for person renders null if contact assignment is not found 1`] = `""`;

exports[`for person renders null if stage is not found 1`] = `""`;

exports[`for person renders stage 1`] = `
<MyText
  accessible={true}
  allowFontScaling={true}
  ellipsizeMode="tail"
  style={
    Object {
      "color": "#ffffff",
      "fontSize": 14,
      "letterSpacing": 0.25,
    }
  }
>
  Curios
</MyText>
`;

exports[`for self renders null if stage is not found 1`] = `""`;

exports[`for self renders stage 1`] = `
<MyText
  accessible={true}
  allowFontScaling={true}
  ellipsizeMode="tail"
  style={
    Object {
      "color": "#ffffff",
      "fontSize": 14,
      "letterSpacing": 0.25,
    }
  }
>
  Forgiven
</MyText>
`;
